--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "@vercel/analytics": "^1.5.0",
+    "dayjs": "^1.11.13",
     "react": "^19.1.1",
-    "react-day-picker": "^9.8.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.0",
     "react-scripts": "5.0.1",
