--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mowo_fe",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8080",
   "dependencies": {
     "@ncdai/react-wheel-picker": "^1.0.15",
     "@testing-library/dom": "^10.4.1",
